--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=urlshortener
+server.port=8080
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:urlshortener
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+# Schema Initialization
+spring.sql.init.mode=always
