--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=urlshortener
 server.port=8080
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:urlshortener
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mysql://localhost:3306/urlshortener
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Security Configuration
 spring.security.user.name=admin
