--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-# Schema Initialization
-spring.sql.init.mode=always
+logging.level.org.springframework.security=DEBUG
+spring.main.allow-bean-definition-overriding=true
+## Schema Initialization
+#spring.sql.init.mode=always
