--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=urlshortener
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/urlshortener
-spring.datasource.username=root
-spring.datasource.password=root
+\
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/urlshortener}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Security Configuration
+spring.main.allow-circular-references=true
+
+# Schema Initialization
+spring.sql.init.mode=always
 # Security Configuration
 spring.security.user.name=admin
 spring.security.user.password=admin
