--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,11 +17,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Log in to DockerHub (manual)
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Verify schema.sql exists
         run: ls -l ./src/main/resources/schema.sql
@@ -36,5 +33,5 @@ jobs:
 
       - name: Verify build output (for debug purposes)
         run: |
-          echo "Listing build output files..."
+          echo "Listing build output files inside the container..."
           docker run --rm --entrypoint "" ${{ secrets.DOCKER_USERNAME }}/url-shortener:latest ls -l /app
